# dspy_tutorial

./: .gitignore  pyproject.toml  results.txt
basics/: iran_protests_summary.txt
basics/level1_atomic_prompts/: level1.ipynb
basics/level2_multi_interaction/: print_utils.py  t1_sequence.py  t3-multi_out_refine.py  t4_reflection.py
basics/level3_evaluation/: 1.reflection.py  2.pairwise_elo.py  3.analysis.ipynb
basics/level4_tools/: joke_gen.py  main.py
dspy-langgraph-gepa-researcher/: README.md  dspy_gepa_researcher.py
level1_atomic_prompts/: level1.ipynb
level2_multi_interaction/: t2_iterative_refinement.py  t3-multi_out.py  t3_conditional_branch.py
level3_evaluation/: 3.analysis.ipynb  pairwise_elo.py  reflection.py
level4_tools/: idea_gen.py  joke_gen.py  main.py  tool_calling_agent.py  tools.py
level5_rags/: annoy_rag.py  basic_rag.py  bm25_retriever.py  hyde.py  idea_gen.py  joke_gen.py  main.py  prepare_data.py  rank_fusion.py  tools.py  vector_embedding.py
src/dspy_tutorial/: __init__.py
