[project]
name = "dspy-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=3.4.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "seaborn>=0.13.2",
    "pypdf==4.3.1",
    "ipykernel>=6.30.1",
    "langchain-groq>=0.1.10",
    "groq>=0.31.0",
    "openai>=1.99.3",
    "langchain-openai>=0.1.25",
    "langgraph>=0.4.5",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.1",
    "pandas>=2.1.4",
    "ipython>=8.37.0",
    "langchain-experimental>=0.0.64",
    "dspy==3.1.0",
    "rich>=14.2.0",
    "mlflow>=3.8.1",
    "tavily>=1.1.0",
    "exa-py>=2.1.1",
    "importlib>=1.0.4",
    "langchain-tavily>=0.2.17",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
